--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "private": true,
   "scripts": {
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
+    "dev-inside": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js --host 192.168.199.17",
     "start": "npm run dev",
     "build": "node build/build.js"
   },
